boltffi_backend/tests/jni/snapshots/jni__callback__jni_bridge_renders_nullable_callback_handle_returns.snap
---
source: boltffi_backend/tests/jni/callback.rs
expression: "rendered_fixture(\"callback/nullable_callback_handle_return\")"
---
===== jni/demo.h =====
#pragma once

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct {
    int32_t code;
} FfiStatus;

#define FFI_STATUS_OK ((FfiStatus){0})
#define FFI_STATUS_NULL_POINTER ((FfiStatus){1})
#define FFI_STATUS_BUFFER_TOO_SMALL ((FfiStatus){2})
#define FFI_STATUS_INVALID_ARG ((FfiStatus){3})
#define FFI_STATUS_CANCELLED ((FfiStatus){4})
#define FFI_STATUS_INTERNAL_ERROR ((FfiStatus){100})

typedef struct {
    uint8_t *ptr;
    uintptr_t len;
    uintptr_t cap;
    uintptr_t align;
} FfiBuf_u8;

typedef struct {
    uint8_t *ptr;
    uintptr_t len;
    uintptr_t cap;
} FfiString;

typedef struct {
    FfiString message;
} FfiError;

typedef struct {
    const uint8_t *ptr;
    uintptr_t len;
} FfiSpan;

typedef const void *RustFutureHandle;
typedef int8_t StreamPollResult;
typedef int32_t WaitResult;
typedef void (*RustFutureContinuationCallback)(uint64_t callback_data, int8_t poll_result);
typedef void (*StreamContinuationCallback)(uint64_t callback_data, StreamPollResult result);

typedef struct {
    uint64_t handle;
    const void *vtable;
} BoltFFICallbackHandle;

void boltffi_free_string(FfiString string);
void boltffi_free_buf(FfiBuf_u8 buf);
FfiBuf_u8 boltffi_buf_from_bytes(const uint8_t *ptr, uintptr_t len);
FfiStatus boltffi_last_error_message(FfiString *out);
void boltffi_clear_last_error(void);
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    uint32_t (*on_value)(uint64_t, uint32_t);
} ___ListenerVTable;
void boltffi_register_callback_demo_listener(const ___ListenerVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_listener(uint64_t handle);
BoltFFICallbackHandle boltffi_function_demo_optional_boxed_listener(void);
BoltFFICallbackHandle boltffi_function_demo_optional_shared_listener(void);

#ifdef __cplusplus
}
#endif
===== jni/jni_glue.c =====
#include <jni.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#if defined(__ANDROID__)
#include <pthread.h>
#endif

#include "demo.h"
static JavaVM *boltffi_jni_vm = NULL;
static jclass boltffi_jni_native_class = NULL;

#define BOLTFFI_JNI_LOCAL_FRAME_CAPACITY 64
static jint boltffi_jni_attach_current_thread(JavaVM *vm, JNIEnv **env) {
#if defined(__ANDROID__)
    return (*vm)->AttachCurrentThread(vm, env, NULL);
#else
    return (*vm)->AttachCurrentThread(vm, (void **)env, NULL);
#endif
}
#if defined(__ANDROID__)
static pthread_key_t boltffi_jni_env_key;
static pthread_once_t boltffi_jni_env_key_once = PTHREAD_ONCE_INIT;
static int boltffi_jni_env_key_status = 0;
static char boltffi_jni_tls_attached_marker;

static void boltffi_jni_android_env_destructor(void *value) {
    if (value != NULL && boltffi_jni_vm != NULL) {
        (*boltffi_jni_vm)->DetachCurrentThread(boltffi_jni_vm);
    }
}

static void boltffi_jni_android_env_key_init(void) {
    boltffi_jni_env_key_status =
        pthread_key_create(&boltffi_jni_env_key, boltffi_jni_android_env_destructor);
}

static jint boltffi_jni_android_attach_cached(JavaVM *vm, JNIEnv **env, int *attached) {
    *attached = 0;

    if (pthread_once(&boltffi_jni_env_key_once, boltffi_jni_android_env_key_init) != 0 ||
        boltffi_jni_env_key_status != 0) {
        jint result = boltffi_jni_attach_current_thread(vm, env);
        if (result == JNI_OK) {
            *attached = 1;
        }
        return result;
    }

    jint result = (*vm)->AttachCurrentThreadAsDaemon(vm, env, NULL);
    if (result != JNI_OK) {
        return result;
    }

    if (pthread_setspecific(boltffi_jni_env_key, &boltffi_jni_tls_attached_marker) != 0) {
        (*vm)->DetachCurrentThread(vm);
        *env = NULL;
        return JNI_ERR;
    }

    return JNI_OK;
}
#endif

static bool boltffi_jni_clear_exception(JNIEnv *env) {
    if (!(*env)->ExceptionCheck(env)) {
        return false;
    }
    (*env)->ExceptionClear(env);
    return true;
}

static bool boltffi_jni_enter(JNIEnv **env, int *attached) {
    if (boltffi_jni_vm == NULL) {
        return false;
    }
    *env = NULL;
    *attached = 0;
    jint env_status = (*boltffi_jni_vm)->GetEnv(boltffi_jni_vm, (void **)env, JNI_VERSION_1_6);
    if (env_status == JNI_EDETACHED) {
#if defined(__ANDROID__)
        if (boltffi_jni_android_attach_cached(boltffi_jni_vm, env, attached) != JNI_OK) {
            return false;
        }
#else
        if (boltffi_jni_attach_current_thread(boltffi_jni_vm, env) != JNI_OK) {
            return false;
        }
        *attached = 1;
#endif
    } else if (env_status != JNI_OK) {
        return false;
    }

#if defined(__ANDROID__)
    JNIEnv *callback_env = *env;
    if ((*callback_env)->PushLocalFrame(callback_env, BOLTFFI_JNI_LOCAL_FRAME_CAPACITY) != JNI_OK) {
        boltffi_jni_clear_exception(callback_env);
        if (*attached) {
            (*boltffi_jni_vm)->DetachCurrentThread(boltffi_jni_vm);
            *attached = 0;
        }
        return false;
    }
#endif

    return true;
}

static void boltffi_jni_exit(JNIEnv *env, int attached) {
#if defined(__ANDROID__)
    if (env != NULL) {
        (*env)->PopLocalFrame(env, NULL);
        boltffi_jni_clear_exception(env);
    }
#else
    (void)env;
#endif
    if (attached) {
        (*boltffi_jni_vm)->DetachCurrentThread(boltffi_jni_vm);
    }
}

static void boltffi_jni_throw_runtime(JNIEnv *env, const char *message) {
    jclass exception_class = (*env)->FindClass(env, "java/lang/RuntimeException");
    if (exception_class == NULL) {
        return;
    }
    (*env)->ThrowNew(env, exception_class, message);
    (*env)->DeleteLocalRef(env, exception_class);
}

static void boltffi_jni_throw_illegal_argument(JNIEnv *env, const char *message) {
    jclass exception_class = (*env)->FindClass(env, "java/lang/IllegalArgumentException");
    if (exception_class == NULL) {
        return;
    }
    (*env)->ThrowNew(env, exception_class, message);
    (*env)->DeleteLocalRef(env, exception_class);
}

typedef struct {
    void (*free)(uint64_t handle);
    uint64_t (*clone)(uint64_t handle);
} BoltFFICallbackVTablePrefix;

static const BoltFFICallbackVTablePrefix *boltffi_jni_callback_vtable_prefix(const BoltFFICallbackHandle *callback) {
    return callback == NULL ? NULL : (const BoltFFICallbackVTablePrefix *)callback->vtable;
}

static void boltffi_jni_release_callback_value(BoltFFICallbackHandle callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(&callback);
    if (callback.handle != 0 && vtable != NULL && vtable->free != NULL) {
        vtable->free(callback.handle);
    }
}

static jlong boltffi_jni_callback_handle_new_owned(JNIEnv *env, BoltFFICallbackHandle callback) {
    if (callback.handle == 0 || callback.vtable == NULL) {
        return 0;
    }
    BoltFFICallbackHandle *stored_callback = (BoltFFICallbackHandle *)malloc(sizeof(BoltFFICallbackHandle));
    if (stored_callback == NULL) {
        boltffi_jni_release_callback_value(callback);
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI callback handle");
        return 0;
    }
    *stored_callback = callback;
    return (jlong)(uintptr_t)stored_callback;
}

static BoltFFICallbackHandle *boltffi_jni_callback_handle_ref(jlong handle) {
    return handle == 0 ? NULL : (BoltFFICallbackHandle *)(uintptr_t)handle;
}

static void boltffi_jni_callback_handle_release(BoltFFICallbackHandle *callback) {
    if (callback == NULL) {
        return;
    }
    boltffi_jni_release_callback_value(*callback);
    free(callback);
}

static jlong boltffi_jni_callback_handle_clone(JNIEnv *env, const BoltFFICallbackHandle *callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(callback);
    if (callback == NULL || callback->handle == 0 || vtable == NULL || vtable->clone == NULL) {
        return 0;
    }
    BoltFFICallbackHandle cloned_callback = {
        .handle = vtable->clone(callback->handle),
        .vtable = callback->vtable,
    };
    if (cloned_callback.handle == 0) {
        return 0;
    }
    return boltffi_jni_callback_handle_new_owned(env, cloned_callback);
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1clone(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;
    return boltffi_jni_callback_handle_clone(env, boltffi_jni_callback_handle_ref(handle));
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1release(JNIEnv *env, jclass cls, jlong handle) {
    (void)env;
    (void)cls;
    boltffi_jni_callback_handle_release(boltffi_jni_callback_handle_ref(handle));
}

static jclass g____ListenerVTable_class = NULL;
static jmethodID g____ListenerVTable_free_method = NULL;
static jmethodID g____ListenerVTable_clone_method = NULL;
static jmethodID g____ListenerVTable_on_value_method = NULL;

static void ___ListenerVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___ListenerVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static uint32_t ___ListenerVTable_on_value(uint64_t handle, uint32_t value) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }

    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____ListenerVTable_class, g____ListenerVTable_on_value_method, (jlong)handle, (jint)value);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    return 0;
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1demo_1listener_1on_1value(JNIEnv *env, jclass cls, jlong callback, jint value) {
    (void)cls;

    BoltFFICallbackHandle *callback_handle = boltffi_jni_callback_handle_ref(callback);
    const ___ListenerVTable *vtable = callback_handle == NULL ? NULL : (const ___ListenerVTable *)callback_handle->vtable;
    if (callback_handle == NULL || callback_handle->handle == 0 || vtable == NULL || vtable->on_value == NULL) {
        boltffi_jni_throw_runtime(env, "BoltFFI callback handle was null or invalid");
        goto __boltffi_error;
    }

    uint32_t result = vtable->on_value(callback_handle->handle, value);

    return (jint)result;
__boltffi_error:
    return 0;
}

static ___ListenerVTable g____ListenerVTable_vtable = {
    .free = ___ListenerVTable_free,
    .clone = ___ListenerVTable_clone,
    .on_value = ___ListenerVTable_on_value,
};

static bool boltffi_jni_load____ListenerVTable_callbacks(JNIEnv *env) {
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/ListenerCallbacks");
    if (local_class == NULL) {
        return false;
    }
    g____ListenerVTable_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (g____ListenerVTable_class == NULL) {
        return false;
    }
    g____ListenerVTable_free_method = (*env)->GetStaticMethodID(env, g____ListenerVTable_class, "free", "(J)V");
    if (g____ListenerVTable_free_method == NULL) {
        goto fail;
    }
    g____ListenerVTable_clone_method = (*env)->GetStaticMethodID(env, g____ListenerVTable_class, "clone", "(J)J");
    if (g____ListenerVTable_clone_method == NULL) {
        goto fail;
    }
    g____ListenerVTable_on_value_method = (*env)->GetStaticMethodID(env, g____ListenerVTable_class, "on_value", "(JI)I");
    if (g____ListenerVTable_on_value_method == NULL) {
        goto fail;
    }
    boltffi_register_callback_demo_listener(&g____ListenerVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    g____ListenerVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____ListenerVTable_callbacks(JNIEnv *env) {
    if (g____ListenerVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    }
    g____ListenerVTable_class = NULL;
    g____ListenerVTable_free_method = NULL;
    g____ListenerVTable_clone_method = NULL;
    g____ListenerVTable_on_value_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) != JNI_OK) {
        return JNI_ERR;
    }
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/Native");
    if (local_class == NULL) {
        return JNI_ERR;
    }
    boltffi_jni_native_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (boltffi_jni_native_class == NULL) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____ListenerVTable_callbacks(env)) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1optional_1boxed_1listener(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    BoltFFICallbackHandle result = boltffi_function_demo_optional_boxed_listener();

    return boltffi_jni_callback_handle_new_owned(env, result);
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1optional_1shared_1listener(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    BoltFFICallbackHandle result = boltffi_function_demo_optional_shared_listener();

    return boltffi_jni_callback_handle_new_owned(env, result);
}
